kubernetes/auth-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-server-deployment
  labels:
    app: auth-server
    type: backend
spec:
  template:
    metadata:
      name: auth-server-pod
      labels:
        app: auth-server
        type: backend
    spec:
      containers:
        - name: auth-server-container
          image: kacperkruger/auth-server:latest
  replicas: 1
  selector:
    matchLabels:
      app: auth-server
      type: backend
