kubernetes/board-games-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-games-api-deployment
  labels:
    app: board-games-api
    type: backend
spec:
  template:
    metadata:
      name: board-games-api-pod
      labels:
        app: board-games-api
        type: backend
    spec:
      containers:
        - name: board-game-api-container
          image: kacperkruger/board_games_api:latest
  replicas: 1
  selector:
    matchLabels:
      app: board-games-api
      type: backend
