kubernetes/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  labels:
    app: keycloak
    type: backend
spec:
  template:
    metadata:
      name: keycloak-pod
      labels:
        app: keycloak
        type: backend
    spec:
      containers:
        - name: keycloak-container
          image: bitnami/keycloak:latest
          ports:
            - containerPort: 8080
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
      type: backend
