kubernetes/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: mongo
    type: db
spec:
  template:
    metadata:
      name: mongo-pod
      labels:
        app: mongo
        type: db
    spec:
      containers:
        - name: mongo-container
          image: mongo:latest
          volumeMounts:
            - mountPath: /data/db
              name: mongovolume
      volumes:
        - name: mongovolume
          persistentVolumeClaim:
            claimName: mongo-pvc
  replicas: 1
  selector:
    matchLabels:
      app: mongo
      type: db
