kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: app
    type: frontend
spec:
  template:
    metadata:
      name: nginx-pod
      labels:
        app: app
        type: frontend
    spec:
      containers:
        - name: nginx-container
          image: kacperkruger/board_games_nginx
          ports:
            - containerPort: 80
  replicas: 3
  selector:
    matchLabels:
      app: app
      type: frontend
