kubernetes/auth-server-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-server-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000

  selector:
    app: auth-server
    type: backend
