kubernetes/board-games-api-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: board-games-api-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000

  selector:
    app: board-games-api
    type: backend
