kubernetes/board-games-api-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: board-games-api-nodeport

spec:
  type: NodePort
  ports:
    - port: 4000
      targetPort: 4000
      nodePort: 31000

  selector:
    app: board-games-api
    type: backend
