kubernetes/board-games-app-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: board-games-app-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80

  selector:
    app: board-games-app
    type: frontend
