kubernetes/board-games-websocket-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: board-games-websocket-clusterip
spec:
  type: ClusterIP
  ports:
    - name: websockets
      protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: board-games-websocket
    type: websocket
