kubernetes/keycloak-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: keycloak
    type: backend
