kubernetes/mongo-cluterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017

  selector:
    app: mongo
    type: db
